# chat_term

./: .gitignore  LICENSE  README.md  app.py  chat.css  config.json  config.jsonc  install.py  parse_utils.py  pyproject.toml  requirements.txt  restart.sh  run.sh  secrets.json  stop.sh  tmux.conf
