[tool.poetry]
name = "chat-term"
version = "0.1.1"
description = "fast terminal access to chat client"
authors = ["tcrensink <thomas.rensink@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.3.0"
pyperclip = "^1.8.2"
textual = "^0.58"

[tool.poetry.group.dev.dependencies]
ipython = "^8.17.2"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
